ingress/kuber-deploy-svc-latest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-deployment
  labels:
    app: kuber-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
        - name: kuber-deployment
          image: bokovets/kuber
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  selector:
    app: http-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
