ingress/kuber-deploy-svc-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-deployment-v1
  labels:
    app: kuber-deployment-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server-v1
  template:
    metadata:
      labels:
        app: http-server-v1
    spec:
      containers:
        - name: kuber-deployment-v1
          image: bokovets/kuber:v1.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-v1
spec:
  selector:
    app: http-server-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
