ingress/kuber-deploy-svc-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-deployment-v2
  labels:
    app: kuber-deployment-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server-v2
  template:
    metadata:
      labels:
        app: http-server-v2
    spec:
      containers:
        - name: kuber-deployment-v2
          image: bokovets/kuber:v2.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-v2
spec:
  selector:
    app: http-server-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
