ingress/kuber-ingress.yml
# Description: Ingress resource to route traffic to different services based on the path
# Ingress resource is used to route the traffic to different services based on the path.
# In this example, the traffic is routed to the kuber-service when the path is /,
# to the kuber-service-v1 when the path is /v1, and to the kuber-service-v2 when the path is /v2.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress
spec:
  rules:
    - host: kuber.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kuber-service
                port:
                  number: 80
          - pathType: Exact
            path: /v1
            backend:
              service:
                name: kuber-service-v1
                port:
                  number: 80
          - pathType: Exact
            path: /v2
            backend:
              service:
                name: kuber-service-v2
                port:
                  number: 80
